@@ -87,6 +87,9 @@ RELEASE 0.97 - XXX
       different file.  This may cause configuration tests to be re-run
       the first time after you install 0.97.
 
+    - The SCons setup.py script now installs the "scons.1" and
+      "sconsign.1" man pages on UNIX and Linux systems.
+
   Please note the following important changes since release 0.95:
 
     - All Builder calls (both built-in like Program(), Library(),
